# instructly

./: .env.monitoring.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .graphifyignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  .privacy-audit.yml  CHANGELOG.md  CLAUDE.md  CODE_REFERENCE_UPDATES.md  MIGRATION_COMPLETE.md  MIGRATION_LOG.md  MIGRATION_VERIFICATION.md  Makefile  PRE_MIGRATION_INVENTORY.md  README.md  REFERENCE_SEARCH_RESULTS.md  REFERENCE_UPDATES.md  codecov.yml  docker-compose.monitoring.yml  fix_precommit_issues.sh  frontend.env.example  metrics_history.json  package-lock.json  package.json  pre-commit-output.txt  pre-existing-issues-tracker.md  precommit_output.txt  pytest.ini  render.yaml  repository_violations_to_mark.json  setup-local-ssl.sh  start-dev.sh  stop-dev.sh  vercel.json
mcp-server/: .gitignore  README.md  pyproject.toml  run_mcp.py
mcp-server/src/instainstru_mcp/: __init__.py  (+6 more)
mcp-server/src/instainstru_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp-server/tests/: test_analytics.py  test_audit.py  test_auth.py  test_auth_middleware.py  test_booking_actions.py  test_booking_detail.py  test_client.py  test_command_center.py  test_common_time_window.py  test_communications.py  test_deploy.py  test_growth.py  test_health.py  test_instructor_actions.py  test_observability.py  test_otel.py  test_payments.py  test_refunds.py  test_sentry.py  test_sentry_tools.py  test_server_utils.py  test_student_actions.py  test_support.py  test_tool_common.py  test_tools.py  test_webhooks.py
(+4135 files in other folders)
